--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,10 @@
         "laravel/framework": "5.1.*",
         "barryvdh/laravel-ide-helper": "^2.1",
         "doctrine/dbal": "^2.5",
-        "barryvdh/laravel-debugbar": "~2.0"
+        "barryvdh/laravel-debugbar": "~2.0",
+        "graham-campbell/markdown": "^5.3",
+        "laravelcollective/html": "~5.0",
+        "greggilbert/recaptcha": "dev-master"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
