--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "laravelcollective/html": "~5.0",
         "greggilbert/recaptcha": "dev-master",
         "kriswallsmith/buzz": "^0.15.0",
-        "devfactory/media": "2.0.*"
+        "devfactory/media": "2.0.*",
+        "rtconner/laravel-likeable": "~1.2"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
